[project]
name = "agentlab"
version = "0.1.0"
description = "Demo project to test coding agents"
readme = "README.md"
requires-python = ">=3.10"

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
